# vitae

./: .gitignore  ICON-GUIDE.md  LICENSE  README.md  index.html  package-lock.json  package.json
app/: globals.css
src/: App.css  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  main.rs
src/components/: Editor.tsx  PDFViewer.tsx  SetupGuide.tsx  Sidebar.tsx  UpdateChecker.tsx
